added ui-view to header, introduced toolbars that change depending on state

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
     <script src="./bower_components/ng-ckeditor/dist/ng-ckeditor.min.js"></script>
     <script src="./app/assets/ckeditor/ckeditor.js"></script>
 
+    <!-- angular tables -->
+    <link href="bower_components/angular-material-data-table/dist/md-data-table.min.css" rel="stylesheet" type="text/css"/>
+    <script type="text/javascript" src="bower_components/angular-material-data-table/dist/md-data-table.min.js"></script>
+
     <!-- OpenDesk App -->
     <script src="./dist/opendesk-app.js"></script>
 
@@ -62,7 +66,6 @@
     
     <header ui-view="header" class="od-header"></header>
     <main ui-view="content" class="od-body"></main>
-    <footer ui-view="footer" class="od-footer"></footer>
     <div id="loader"></div>
 
 </body>
