lots of changes to the layout

--- a/app/src/system_settings/system_settings.html
+++ b/app/src/system_settings/system_settings.html
@@ -3,15 +3,32 @@
         <md-button class="md-text-icon-button" aria-label="Dashboard" ng-click="viewDashboard()">
             <md-icon>dashboard</md-icon> Dashboard
         </md-button>
-        <md-button class="md-text-icon-button" aria-label="Behandlere" ng-click="viewPractitioners()">
+        <!--<md-button class="md-text-icon-button" aria-label="Behandlere" ng-click="viewPractitioners()">
             <md-icon>people</md-icon> Behandlere
+        </md-button>-->
+        <md-button class="md-text-icon-button" aria-label="Sigtelser" ng-click="viewEthnicities()">
+            <md-icon>store</md-icon> Henvisende instanser
+        </md-button>
+                <md-button class="md-text-icon-button" aria-label="Sigtelser" ng-click="viewEthnicities()">
+            <md-icon>pan_tool</md-icon> Sigtelser
+        </md-button>
+                <md-button class="md-text-icon-button" aria-label="Sanktioner" ng-click="viewEthnicities()">
+            <md-icon>gavel</md-icon> Sanktioner
+        </md-button>
+                <md-button class="md-text-icon-button" aria-label="Placeringer" ng-click="viewEthnicities()">
+            <md-icon>pan_tool</md-icon> Placeringer
         </md-button>
         <md-button class="md-text-icon-button" aria-label="Diagnoser" ng-click="viewDiagnosis()">
             <md-icon>assignment</md-icon> Diagnoser
         </md-button>
+
         <md-button class="md-text-icon-button" aria-label="Etniciteter" ng-click="viewEthnicities()">
             <md-icon>face</md-icon> Etniciteter
         </md-button>
+                <md-button class="md-text-icon-button" aria-label="Statusser" ng-click="viewEthnicities()">
+            <md-icon>flag</md-icon> Statusser
+        </md-button>
+
     </md-sidenav>
 
     <div class="od-info-declarations" flex>
