--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     
     <header ui-view="header" class="od-header"></header>
     <main ui-view="content" class="od-body"></main>
+    <footer ui-view="footer"></footer>
     <div id="loader"></div>
 
 </body>
