lots on minor changes, initial work on generic list view for administration

--- a/app/src/system_settings/system_settings.html
+++ b/app/src/system_settings/system_settings.html
@@ -3,9 +3,9 @@
         <md-button class="md-text-icon-button" aria-label="Dashboard" ng-click="viewDashboard()">
             <md-icon>dashboard</md-icon> Dashboard
         </md-button>
-        <!--<md-button class="md-text-icon-button" aria-label="Behandlere" ng-click="viewPractitioners()">
-            <md-icon>people</md-icon> Behandlere
-        </md-button>-->
+        <md-button class="md-text-icon-button" aria-label="Behandlere" ng-click="viewPractitioners()">
+            <md-icon>people</md-icon> Brugerrettigheder
+        </md-button>
         <md-button class="md-text-icon-button" aria-label="Sigtelser" ng-click="viewEthnicities()">
             <md-icon>store</md-icon> Henvisende instanser
         </md-button>
