generalization of the admin module

--- a/app/src/system_settings/system_settings.html
+++ b/app/src/system_settings/system_settings.html
@@ -6,23 +6,23 @@
         <md-button class="md-text-icon-button" aria-label="Behandlere" ng-click="viewPractitioners()">
             <md-icon>people</md-icon> Brugerrettigheder
         </md-button>
-        <md-button class="md-text-icon-button" aria-label="Sigtelser" ng-click="viewEthnicities()">
+        <md-button class="md-text-icon-button" aria-label="Sigtelser" ng-click="viewState('referingAgencies')">
             <md-icon>store</md-icon> Henvisende instanser
         </md-button>
-                <md-button class="md-text-icon-button" aria-label="Sigtelser" ng-click="viewEthnicities()">
+                <md-button class="md-text-icon-button" aria-label="Sigtelser" ng-click="viewState('mainCharge')">
             <md-icon>pan_tool</md-icon> Sigtelser
         </md-button>
-                <md-button class="md-text-icon-button" aria-label="Sanktioner" ng-click="viewEthnicities()">
+                <md-button class="md-text-icon-button" aria-label="Sanktioner" ng-click="viewState('sanctions')">
             <md-icon>gavel</md-icon> Sanktioner
         </md-button>
-                <md-button class="md-text-icon-button" aria-label="Placeringer" ng-click="viewEthnicities()">
+                <md-button class="md-text-icon-button" aria-label="Placeringer" ng-click="viewState('placement')">
             <md-icon>pan_tool</md-icon> Placeringer
         </md-button>
-        <md-button class="md-text-icon-button" aria-label="Diagnoser" ng-click="viewDiagnosis()">
+        <md-button class="md-text-icon-button" aria-label="Diagnoser" ng-click="viewState('diagnosis')">
             <md-icon>assignment</md-icon> Diagnoser
         </md-button>
 
-        <md-button class="md-text-icon-button" aria-label="Etniciteter" ng-click="viewEthnicities()">
+        <md-button class="md-text-icon-button" aria-label="Etniciteter" ng-click="viewState('ethnicities')">
             <md-icon>face</md-icon> Etniciteter
         </md-button>
                 <md-button class="md-text-icon-button" aria-label="Statusser" ng-click="viewEthnicities()">
