lots of changes

--- a/app/src/system_settings/system_settings.html
+++ b/app/src/system_settings/system_settings.html
@@ -16,7 +16,7 @@
             <md-icon>gavel</md-icon> Sanktioner
         </md-button>
                 <md-button class="md-text-icon-button" aria-label="Placeringer" ng-click="viewState('placement')">
-            <md-icon>pan_tool</md-icon> Placeringer
+            <md-icon>play_for_work</md-icon> Placeringer
         </md-button>
         <md-button class="md-text-icon-button" aria-label="Diagnoser" ng-click="viewState('diagnosis')">
             <md-icon>assignment</md-icon> Diagnoser
@@ -25,8 +25,11 @@
         <md-button class="md-text-icon-button" aria-label="Etniciteter" ng-click="viewState('ethnicities')">
             <md-icon>face</md-icon> Etniciteter
         </md-button>
-                <md-button class="md-text-icon-button" aria-label="Statusser" ng-click="viewEthnicities()">
+        <md-button class="md-text-icon-button" aria-label="Statusser" ng-click="viewState('status')">
             <md-icon>flag</md-icon> Statusser
+        </md-button>
+        <md-button class="md-text-icon-button" aria-label="Afsluttet ud erklæring" ng-click="viewState('noDeclaration')">
+            <md-icon>flag</md-icon> Afsluttet uden erklæring
         </md-button>
 
     </md-sidenav>
