can now properly finish a case

--- a/app/src/system_settings/system_settings.html
+++ b/app/src/system_settings/system_settings.html
@@ -29,7 +29,7 @@
             <md-icon>flag</md-icon> Statusser
         </md-button>
         <md-button class="md-text-icon-button" aria-label="Afsluttet ud erklæring" ng-click="viewState('noDeclaration')">
-            <md-icon>flag</md-icon> Afsluttet uden erklæring
+            <md-icon>check</md-icon> Afsluttet uden erklæring
         </md-button>
 
     </md-sidenav>
