--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
 <body ng-app="openDeskApp" class="od-app">
     
     <header ui-view="header" class="od-header"></header>
+    <div ng-controller="LoadingController" style="position:fixed;margin-top:128px;width:100%">
+        <md-progress-linear md-mode="indeterminate" ng-if="isLoading"></md-progress-linear>
+    </div>
     <main ui-view="content" class="od-body"></main>
     <footer ui-view="footer"></footer>
     <div id="loader"></div>
