Fixed userRoles and authorization for system settings.

--- a/app/src/system_settings/system_settings.html
+++ b/app/src/system_settings/system_settings.html
@@ -3,31 +3,31 @@
         <md-button class="md-text-icon-button" aria-label="Dashboard" ng-click="viewDashboard()">
             <md-icon>dashboard</md-icon> Dashboard
         </md-button>
-        <md-button ng-if="auth.SiteRoleManager" class="md-text-icon-button" aria-label="Behandlere" ng-click="viewPractitioners()">
+        <md-button ng-if="userRoles.indexOf('SiteRoleManager') > -1" class="md-text-icon-button" aria-label="Behandlere" ng-click="viewPractitioners()">
             <md-icon>people</md-icon> Brugerrettigheder
         </md-button>
-        <md-button ng-if="auth.SitePropertyValueManager" class="md-text-icon-button" aria-label="Sigtelser" ng-click="viewState('referingAgencies')">
+        <md-button ng-if="userRoles.indexOf('SitePropertyValueManager') > -1" class="md-text-icon-button" aria-label="Sigtelser" ng-click="viewState('referingAgencies')">
             <md-icon>store</md-icon> Henvisende instanser
         </md-button>
-        <md-button ng-if="auth.SitePropertyValueManager" class="md-text-icon-button" aria-label="Sigtelser" ng-click="viewState('mainCharge')">
+        <md-button ng-if="userRoles.indexOf('SitePropertyValueManager') > -1" class="md-text-icon-button" aria-label="Sigtelser" ng-click="viewState('mainCharge')">
             <md-icon>pan_tool</md-icon> Sigtelser
         </md-button>
-        <md-button ng-if="auth.SitePropertyValueManager" class="md-text-icon-button" aria-label="Sanktioner" ng-click="viewState('sanctions')">
+        <md-button ng-if="userRoles.indexOf('SitePropertyValueManager') > -1" class="md-text-icon-button" aria-label="Sanktioner" ng-click="viewState('sanctions')">
             <md-icon>gavel</md-icon> Sanktioner
         </md-button>
-        <md-button ng-if="auth.SitePropertyValueManager" class="md-text-icon-button" aria-label="Placeringer" ng-click="viewState('placement')">
+        <md-button ng-if="userRoles.indexOf('SitePropertyValueManager') > -1" class="md-text-icon-button" aria-label="Placeringer" ng-click="viewState('placement')">
             <md-icon>play_for_work</md-icon> Placeringer
         </md-button>
-        <md-button ng-if="auth.SitePropertyValueManager" class="md-text-icon-button" aria-label="Diagnoser" ng-click="viewState('diagnosis')">
+        <md-button ng-if="userRoles.indexOf('SitePropertyValueManager') > -1" class="md-text-icon-button" aria-label="Diagnoser" ng-click="viewState('diagnosis')">
             <md-icon>assignment</md-icon> Diagnoser
         </md-button>
-        <md-button ng-if="auth.SitePropertyValueManager" class="md-text-icon-button" aria-label="Etniciteter" ng-click="viewState('ethnicities')">
+        <md-button ng-if="userRoles.indexOf('SitePropertyValueManager') > -1" class="md-text-icon-button" aria-label="Etniciteter" ng-click="viewState('ethnicities')">
             <md-icon>face</md-icon> Etniciteter 
         </md-button>
-        <md-button ng-if="auth.SitePropertyValueManager" class="md-text-icon-button" aria-label="Statusser" ng-click="viewState('status')">
+        <md-button ng-if="userRoles.indexOf('SitePropertyValueManager') > -1" class="md-text-icon-button" aria-label="Statusser" ng-click="viewState('status')">
             <md-icon>flag</md-icon> Statusser
         </md-button>
-        <md-button ng-if="auth.SitePropertyValueManager" class="md-text-icon-button" aria-label="Afsluttet ud erklæring" ng-click="viewState('noDeclaration')">
+        <md-button ng-if="userRoles.indexOf('SitePropertyValueManager') > -1" class="md-text-icon-button" aria-label="Afsluttet ud erklæring" ng-click="viewState('noDeclaration')">
             <md-icon>check</md-icon> Afsluttet uden erklæring
         </md-button>
 
