--- a/app/src/filebrowser/upload/upload.view.html
+++ b/app/src/filebrowser/upload/upload.view.html
@@ -23,9 +23,9 @@
 
         <md-dialog-actions>
             <div layout="row" layout-sm="column" layout-align="space-around">
-                <md-progress-circular md-mode="indeterminate" ng-show="uploading"></md-progress-circular>
+                <md-progress-circular md-mode="indeterminate" ng-show="vm.uploading"></md-progress-circular>
             </div>
-            <md-button class="md-primary" type="submit" ng-click="vm.uploadFiles()" ng-disabled="uploading">
+            <md-button class="md-primary" type="submit" ng-click="vm.uploadFiles()" ng-disabled="vm.uploading">
                 <md-icon>file_upload</md-icon>
                 {{'COMMON.UPLOAD' | translate}} {{'DOCUMENT.DOCUMENTS' | translate | lowercase}}
             </md-button>
