removed template list view and modified document template system settings

--- a/app/src/system_settings/documentTemplates/documentTemplates.view.html
+++ b/app/src/system_settings/documentTemplates/documentTemplates.view.html
@@ -1,5 +1,5 @@
 <md-card>
     <md-card-content>
-        <od-filebrowser></od-filebrowser>
+        <od-filebrowser od-breadcrumb="false"></od-filebrowser>
     </md-card-content>
 </md-card>
