--- a/app/src/header/header.view.html
+++ b/app/src/header/header.view.html
@@ -1,7 +1,5 @@
+<header class="od-header">
 <md-toolbar class="md-tall">
-
-    <!-- <od-user></od-user> -->
-
     <span class="md-toolbar-tools" flex>
         <h2 ui-sref="declaration" style="cursor:pointer">Retspsykiatriske erklæringer</h2>
 
@@ -38,7 +36,9 @@
     </span>
     <span class="md-toolbar-tools" layout="row">
         <ui-view name="toolbar-tools-left"></ui-view>
+        <h2>{{vm.leftHeaderTitle}}</h2>
         <span flex></span>
         <ui-view name="toolbar-tools-right"></ui-view>
     </span>
 </md-toolbar>
+</header>
