--- a/app/src/header/header.view.html
+++ b/app/src/header/header.view.html
@@ -14,7 +14,7 @@
                     <md-button 
                     class="md-icon-button"
                     title="Dokumenter" 
-                    ui-sref="administration">
+                    ui-sref="documents">
                     <md-icon>insert_drive_file</md-icon>
                     <md-tooltip md-delay="500" md-direction="bottom">Dokumenter</md-tooltip>
                 </md-button>
@@ -36,7 +36,7 @@
     </span>
     <span class="md-toolbar-tools" layout="row">
         <ui-view name="toolbar-tools-left"></ui-view>
-        <h2>{{vm.leftHeaderTitle}}</h2>
+        <!-- <h2>{{vm.leftHeaderTitle}}</h2> -->
         <span flex></span>
         <ui-view name="toolbar-tools-right"></ui-view>
     </span>
