--- a/app/src/header/header.view.html
+++ b/app/src/header/header.view.html
@@ -14,7 +14,7 @@
                     <md-button 
                     class="md-icon-button"
                     title="Dokumenter" 
-                    ui-sref="documents">
+                    ui-sref="declaration.documents">
                     <md-icon>insert_drive_file</md-icon>
                     <md-tooltip md-delay="500" md-direction="bottom">Dokumenter</md-tooltip>
                 </md-button>
