--- a/app/src/header/header.view.html
+++ b/app/src/header/header.view.html
@@ -20,7 +20,7 @@
                 </md-button>
         
                     <md-button 
-                        ng-if="ac.userRoles.indexOf('SiteManager') > -1 || ac.userRoles.indexOf('SiteRoleManager') > -1 || ac.userRoles.indexOf('SitePropertyValueManager') > -1"
+                        ng-if="ac.userRoles.indexOf('SiteManager') > -1 || ac.userRoles.indexOf('SiteRoleManager') > -1 || ac.userRoles.indexOf('SitePropertyValueManager') > -1 || ac.userRoles.indexOf('SiteRoleManager') > -1 || ac.userRoles.indexOf('TemplateFolderValueManager') > -1"
                         class="md-icon-button"
                         title="Indstillinger" 
                         ui-sref="administration">
