--- a/app/src/system_settings/system_settings.html
+++ b/app/src/system_settings/system_settings.html
@@ -9,7 +9,7 @@
             <md-icon>people</md-icon> Brugerrettigheder
         </md-button>
 
-        <md-button ng-if="userRoles.indexOf('SiteRoleManager') > -1 || userRoles.indexOf('SiteManager') > -1" class="md-text-icon-button"
+        <md-button ng-if="userRoles.indexOf('TemplateFolderValueManager') > -1 || userRoles.indexOf('SiteManager') > -1" class="md-text-icon-button"
             aria-label="Dokumentskabeloner" ng-click="vm.viewState('document_templates')">
             <md-icon>content_copy</md-icon> Dokumentskabeloner
         </md-button>
