removed drag-n-drop from file upload, removes shared from breadcrumb and added a back button for previews

--- a/app/src/filebrowser/upload/upload.view.html
+++ b/app/src/filebrowser/upload/upload.view.html
@@ -10,11 +10,7 @@
         </md-toolbar>
 
         <md-dialog-content class="md-padding">
-                <!-- <input id="upload" file-model="files" multiple="" type="file"> -->
-
-                <div ngf-drop ngf-select ng-model="vm.files" class="drop-box" 
-                ngf-drag-over-class="'dragover'" ngf-multiple="true" ngf-allow-dir="true">
-                Træk dine filer her, eller tryk for at vælge</div>
+                <input type="file" ngf-select ngf-multiple="true" ng-model="vm.files" required>
 
                 <ul>
                     <li ng-repeat="f in vm.files" style="font:smaller">{{f.name}} {{f.$error}} {{f.$errorParam}}</li>
@@ -25,7 +21,7 @@
             <div layout="row" layout-sm="column" layout-align="space-around">
                 <md-progress-circular md-mode="indeterminate" ng-show="vm.uploading"></md-progress-circular>
             </div>
-            <md-button class="md-primary" type="submit" ng-click="vm.uploadFiles()" ng-disabled="vm.uploading">
+            <md-button class="md-primary" type="submit" ng-click="vm.uploadFiles()" ng-disabled="vm.files.length == 0 || vm.uploading">
                 <md-icon>file_upload</md-icon>
                 {{'COMMON.UPLOAD' | translate}} {{'DOCUMENT.DOCUMENTS' | translate | lowercase}}
             </md-button>
