--- a/app/src/header/header.view.html
+++ b/app/src/header/header.view.html
@@ -1,7 +1,7 @@
 <header class="od-header">
 <md-toolbar class="md-tall">
     <span class="md-toolbar-tools" flex>
-        <h2 ui-sref="declaration" style="cursor:pointer">Retspsykiatriske erklæringer</h2>
+        <h2 ui-sref="declaration" style="cursor:pointer;font-variant:small-caps"><strong>O</strong>bservand <strong>DA</strong>tabase</h2>
 
         <span flex></span>
 
