--- a/app/src/declaration/search/search.view.html
+++ b/app/src/declaration/search/search.view.html
@@ -2,18 +2,20 @@
     <div layout="column" style="height:144px" flex-gt-sm="50" flex>
         <span flex></span>
         <div layout="row">
+            <!-- md-items="case in filterCases(entrySearchQuery, ['cprNumber', 'fullName'])" -->
             <md-autocomplete
                 md-selected-item="selectedCase"
                 md-search-text="entrySearchQuery"
-                md-items="case in filterCases(entrySearchQuery, ['cprNumber', 'caseNumber', 'fullName'])"
+                md-items="case in vm.getEntries(entrySearchQuery)"
                 md-item-text="'Erklæring #'+ case.caseNumber + ' - ' + case.firstName + ' ' + case.lastName + ' (' + case.cprNumber + ')'" 
-                md-min-length="1" 
+                md-min-length="3" 
                 ng-enter="vm.gotoCase(selectedCase.caseNumber)"
-                placeholder="{{'DECLARATION.SEARCH_NAME_CPR_DECLARATION' | translate}}" flex>
+                placeholder="{{'DECLARATION.SEARCH_NAME_CPR' | translate}}" flex>
                 <md-item-template>
                     <span md-highlight-text="entrySearchQuery" md-highlight-flags="gi">
-                        {{case.cprNumber}} - {{case.firstName}} {{case.lastName}} ({{case.caseNumber}})
+                        {{case.cprNumber}} - {{case.firstName}} {{case.lastName}}
                     </span>
+                    ({{case.caseNumber}})
                     <md-icon ng-show="(case.hasOwnProperty('closed') && case.closed) || (case.hasOwnProperty('closedWithoutDeclaration') && case.closedWithoutDeclaration)">done</md-icon>
                 </md-item-template>
             </md-autocomplete>
