renamed input field

--- a/app/src/declaration/advancedSearch/advancedSearch.view.html
+++ b/app/src/declaration/advancedSearch/advancedSearch.view.html
@@ -137,7 +137,7 @@
                     md-items="status in propertyFilter(propertyValues['status'],statusSearch)"
                     md-item-text="status" 
                     md-min-length="0" 
-                    md-floating-label="Status"
+                    md-floating-label="Retslig status"
                     md-require-match="true"
                     md-clear-button="true">
                     <md-item-template>
