--- a/app/src/declaration/advancedSearch/advancedSearch.view.html
+++ b/app/src/declaration/advancedSearch/advancedSearch.view.html
@@ -92,6 +92,21 @@
                         <md-datepicker ng-model="searchParams.toDate"></md-datepicker>
                     </md-input-container>
                 </div>
+                
+                <md-input-container>
+                        <label>Sagsstatus</label>
+                        <md-select ng-model="searchParams.closed">
+                            <md-option ng-value="true" selected>
+                                Afsluttet
+                            </md-option>
+                            <md-option ng-value="false">
+                                Ikke afsluttet
+                            </md-option>
+                            <md-option ng-value="undefined">
+                                Alle
+                            </md-option>
+                        </md-select>
+                    </md-input-container>
                 </div>
             </div>
 
@@ -249,6 +264,7 @@
         </div>
     </md-card-title>
     <md-card-content>
+            <md-progress-linear md-mode="indeterminate" ng-show="vm.isLoading"></md-progress-linear>
         <md-table-container>
             <table md-table>
                 <thead md-head md-order="query.order">
