--- a/app/src/system_settings/system_settings.html
+++ b/app/src/system_settings/system_settings.html
@@ -62,7 +62,7 @@
             <md-icon>check</md-icon> Afsluttet uden erklæring
         </md-button>
         <md-button ng-if="userRoles.indexOf('SitePropertyValueManager') > -1 || userRoles.indexOf('SiteManager') > -1" class="md-text-icon-button"
-                aria-label="Myndigheder" ng-click="vm.viewState('email_authorities')">
+                aria-label="Myndigheder" ng-click="vm.viewState('emailAuthorities')">
                 <md-icon>check</md-icon> Myndigheder
             </md-button>
 
